*SVN*

* Fixed assert_redirected_to to work with :only_path => false #1204 [Alisdair McDiarmid]

* Fixed render_partial_collection to output an empty string instead of nil when handed an empty array #1202 [Ryan Carver]

* Improved the speed of regular expression expirations for caching by a factor of 10 #1221 [Jamis Buck]

* Removed dumping of template assigns on the rescue page as it would very easily include a ton of data making page loads take seconds (and the information was rarely helpful) #1222

* Added BenchmarkHelper that can measure the execution time of a block in a template and reports the result to the log. Example:
  
    <% benchmark "Notes section" do %>
      <%= expensive_notes_operation %>
    <% end %>
  
   Will add something like "Notes section (0.345234)" to the log.

* Added ActionController::Caching::Sweeper as an improved an easier to use sweeper. The new sweepers work on a single-step approach instead of two-steps like the old ones. Before

    def after_save(record)
      @list = record.is_a?(List) ? record : record.list
    end
    
    def filter(controller)
      controller.expire_page(:controller => "lists", :action => %w( show public feed ), :id => @list.id)
      controller.expire_action(:controller => "lists", :action => "all")
      @list.shares.each { |share| controller.expire_page(:controller => "lists", :action => "show", :id => share.url_key) }
    end

  ..after:

    def after_save(record)
      list = record.is_a?(List) ? record : record.list
      expire_page(:controller => "lists", :action => %w( show public feed ), :id => list.id)
      expire_action(:controller => "lists", :action => "all")
      list.shares.each { |share| expire_page(:controller => "lists", :action => "show", :id => share.url_key) }
    end
