@@ -175,6 +175,10 @@ module ActionView
         options["type"]     = "radio"
         options["value"]    = tag_value
         options["checked"]  = "checked" if value == tag_value
+        pretty_tag_value    = tag_value.gsub(/\s/, "_").gsub(/\W/, "").downcase
+        options["id"]       = @auto_index ?             
+          "#{@object_name}_#{@auto_index}_#{@method_name}_#{pretty_tag_value}" :
+          "#{@object_name}_#{@method_name}_#{pretty_tag_value}"
         add_default_name_and_id(options)
         tag("input", options)
       end
